--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "package.json"
   ],
   "version": "1.0.2",
-  "author": "Max Ogden <mogden@gmail.com>",
+  "author": "Max Ogden <mogden@gmail.com>, Gerald Arthur <gerald.a.rich@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/maxogden/node-gist.git"
+    "url": "git://github.com/geraldarthur/node-gist.git"
   },
   "main": "index",
   "bin": {
@@ -20,8 +20,7 @@
   "engines": {
     "node": ">=0.6.0"
   },
-  "dependencies": {
-    "request": "~2.10.0",
-    "underscore": "~1.3.3"
+  "devDependencies": {
+    "coffee-script": "~1.6.3"
   }
 }
